--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -142,7 +142,9 @@ body {
   }
 
   &__image {
+    border-radius: 100%;
     width: 92%;
+    box-shadow: 10px 10px 10px rgba($green, .5);
   }
 
   &__btn {
