--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -298,6 +298,11 @@ body {
   box-shadow: 0 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
   text-transform: uppercase;
   text-decoration: none;
+
+  &_small {
+    padding: 2rem 3.4rem;
+    font-size: 1.4rem;
+  }
 }
 
 .offer {
@@ -312,11 +317,11 @@ body {
     margin-top: 6rem;
     max-width: 700px;
   }
+}
 
-  &__slider {
-    overflow: hidden;
-    padding-top: 100px;
-  }
+.slider {
+  overflow: hidden;
+  padding-top: 10rem;
 }
 
 .swiper {
@@ -330,8 +335,6 @@ body {
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
     padding: 4rem;
     height: 520px;
     background-position: center;
@@ -350,25 +353,32 @@ body {
       background-image: url(../images/meat.png);
     }
 
+    &_white {
+      align-items: flex-start;
+      justify-content: flex-end;
+
+      &:hover {
+        .swiper-slide__hover {
+          height: 233px;
+          opacity: 1;
+        }
+
+        &::after {
+          content: '';
+          position: absolute;
+          top: 2px;
+          left: 2px;
+          z-index: -1;
+          border-radius: 2rem;
+          width: calc(100% - 4px);
+          height: calc(100% - 4px);
+          background-color: rgba($white, .55);
+        }
+      }
+    }
+
     &:hover {
       box-shadow: 0 0 0 2px rgba($green, .4) inset;
-
-      .swiper-slide__hover {
-        height: 233px;
-        opacity: 1;
-      }
-
-      &::after {
-        content: '';
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        z-index: -1;
-        border-radius: 2rem;
-        width: calc(100% - 4px);
-        height: calc(100% - 4px);
-        background-color: rgba($white, .55);
-      }
     }
 
     &__title {
@@ -446,6 +456,49 @@ body {
   }
 }
 
+.counter {
+  display: flex;
+
+  &__btn {
+    border: 1px solid $green;
+    border-radius: 100%;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+
+  &__minus {
+    background-image: url(../images/minus-counter.svg);
+    background-size: 25px 25px;
+    opacity: 0.4;
+    pointer-events: none;
+  }
+
+  &__plus {
+    background-image: url(../images/plus-counter.svg);
+    background-size: 25px 25px;
+  }
+
+  &__input {
+    border: none;
+    padding: 0;
+    width: 46px;
+    font-size: 2.4rem;
+    text-align: center;
+  }
+
+  &_small {
+    .counter__btn {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
+
 .about {
   padding-top: 3rem;
   padding-bottom: 10rem;
@@ -459,12 +512,13 @@ body {
   &__text {
     padding-top: 4.5rem;
     padding-left: 12rem;
-    max-width: 59rem;
+    flex-basis: 59rem;
   }
 
   &__list {
     display: flex;
     gap: 8.5rem;
+    padding: 0;
     list-style-type: none;
   }
 
@@ -472,32 +526,207 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
     font-family: $font-cormorant;
     font-style: italic;
     font-weight: 700;
     font-size: 30px;
+
+    &::before {
+      content: '';
+      border: 1px solid rgba($green, .4);
+      border-radius: 100%;
+      width: 8.6rem;
+      height: 8.6rem;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    &:nth-child(1) {
+      &::before {
+        background-image: url(../images/fruits.svg);
+      }
+    }
+
+    &:nth-child(2) {
+      &::before {
+        background-image: url(../images/traditional.svg);
+      }
+    }
+
+    &:nth-child(3) {
+      &::before {
+        background-image: url(../images/good.svg);
+      }
+    }
+  }
+}
+
+.trends {
+  padding-top: 7.3rem;
+  padding-bottom: 10rem;
+
+  &__text {
+    margin-top: 2.2rem;
   }
 
-  &__icon {
-    border: 1px solid rgba($green, .4);
-    border-radius: 100%;
-    width: 8.6rem;
-    height: 8.6rem;
-    background-position: center;
-    background-repeat: no-repeat;
+  .swiper-slide {
+    height: 686px;
 
-    &_fruits {
-      background-image: url(../images/fruits.svg);
+    &__cover {
+      height: 340px;
     }
 
-    &_traditional {
-      background-image: url(../images/traditional.svg);
+    &__image {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
 
-    &_good {
-      background-image: url(../images/good.svg);
+    &__description {
+      margin: 0;
+      margin-top: 3rem;
+      max-width: 29rem;
+      font-size: 1.8rem;
+      color: rgba($green, .6);
     }
+
+    &__price {
+      margin: 0;
+      margin-top: 3rem;
+      font-size: 2.4rem;
+    }
+
+    &__footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: auto;
+    }
+  }
+}
+
+.catalog {
+  padding-top: 8.7rem;
+
+  &__text {
+    margin-top: 3.9rem;
+  }
+
+  &__categories {
+    display: flex;
+    gap: 2rem;
+    margin-top: 8.5rem;
+  }
+
+  &__input {
+    position: absolute;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
+  &__btn {
+    border: 1px solid currentColor;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 22.9rem;
+    min-height: 7rem;
+    font-size: 1.8rem;
+    color: rgba($green, .6);
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  &__input:checked + &__btn {
+    color: $orange;
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem 2rem;
+    padding: 0;
+    margin-top: 5rem;
+    list-style-type: none;
+  }
+
+  &__load {
+    border: none;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    padding: 0;
+    margin: 6rem auto 10rem;
+    font-size: 1.6rem;
+    color: rgba($green, .6);
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      width: 2.5rem;
+      height: 2.5rem;
+      background-image: url(../images/refresh.png);
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.card {
+  position: relative;
+  border: 1px solid rgba($green, .4);
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 2rem;
+  height: 432px;
+
+  &:hover {
+    box-shadow: 0 0 0 2px rgba($green, .4) inset;
+  }
+
+  &__cover {
+    height: 200px;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  &__title {
+    margin: 0;
+    font-family: "Cormorant", serif;
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  &__description {
+    margin: 0;
+    margin-top: 3rem;
+    max-width: 29rem;
+    max-width: 24rem;
+    font-size: 1.6rem;
+    color: rgba($green, .6);
+  }
+
+  &__price {
+    margin: 0;
+    margin-top: 3rem;
+    font-size: 2.4rem;
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: auto;
   }
 }
 
