--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -609,6 +609,7 @@ body {
 
 .catalog {
   padding-top: 8.7rem;
+  padding-bottom: 10rem;
 
   &__text {
     margin-top: 3.9rem;
@@ -661,7 +662,7 @@ body {
     align-items: center;
     gap: 1.6rem;
     padding: 0;
-    margin: 6rem auto 10rem;
+    margin: 6rem auto 0;
     font-size: 1.6rem;
     color: rgba($green, .6);
     cursor: pointer;
