--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 
 $green: #27300f;
 $orange: #d26a22;
+$dark-orange: #cf5c0d;
 $white: #fff;
 
 $font-jost: 'Jost', sans-serif;
@@ -16,6 +17,10 @@ body {
   font-size: 1.6rem;
   font-family: $font-jost;
   color: $green;
+  background-image: url(../images/background.jpg);
+  background-size: cover;
+  background-position-x: center;
+  background-repeat: no-repeat;
 }
 
 .visually-hidden {
@@ -48,6 +53,7 @@ body {
   &__link {
     color: $green;
     text-decoration: none;
+    transition: color 0.3s ease;
 
     &:hover {
       color: $orange;
@@ -58,6 +64,7 @@ body {
     font-weight: 500;
     color: $green;
     text-decoration: none;
+    transition: color 0.3s ease;
 
     &:hover {
       color: $orange;
@@ -77,6 +84,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     cursor: pointer;
+    transition: all 0.3s ease;
 
     &:hover {
       border-color: $green;
@@ -111,10 +119,6 @@ body {
   position: relative;
   z-index: 0;
   padding-bottom: 187px;
-  background-image: url(../images/main.png);
-  background-position-x: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 
   &__item {
     margin-top: 6rem;
@@ -184,6 +188,7 @@ body {
       height: 11px;
       background-color: $green;
       box-shadow: 0 0 0 4px $white, 0 0 0 5px $green;
+      transition: all 0.3s ease;
     }
 
     &:hover::before {
@@ -310,6 +315,11 @@ body {
   box-shadow: 0 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
   text-transform: uppercase;
   text-decoration: none;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: $dark-orange;
+  }
 
   &_small {
     padding: 2rem 3.4rem;
@@ -320,10 +330,6 @@ body {
 .offer {
   padding-top: 2rem;
   padding-bottom: 12.8rem;
-  background-image: url(../images/offer.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 
   &__text {
     margin-top: 6rem;
@@ -349,6 +355,7 @@ body {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    transition: box-shadow 0.3s ease;
 
     &_card_one {
       background-image: url(../images/milk.png);
@@ -360,6 +367,12 @@ body {
 
     &_card_three {
       background-image: url(../images/meat.png);
+    }
+
+    &__hover {
+      height: 0;
+      opacity: 0;
+      transition: all 0.3s ease;
     }
 
     &_white {
@@ -401,11 +414,6 @@ body {
       line-height: 1;
     }
 
-    &__hover {
-      height: 0;
-      opacity: 0;
-    }
-
     &__text {
       margin: 0;
       margin-top: 2.5rem;
@@ -425,6 +433,7 @@ body {
       text-transform: uppercase;
       letter-spacing: 0.1rem;
       opacity: .8;
+      transition: opacity 0.3s ease;
 
       &:hover {
         opacity: 1;
@@ -514,10 +523,6 @@ body {
 .about {
   padding-top: 3rem;
   padding-bottom: 10rem;
-  background-image: url(../images/about.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 
   &__box {
     display: flex;
@@ -582,10 +587,6 @@ body {
 .trends {
   padding-top: 7.3rem;
   padding-bottom: 10rem;
-  background-image: url(../images/trends.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 
   &__text {
     margin-top: 2.2rem;
@@ -638,10 +639,6 @@ body {
 .catalog {
   padding-top: 8.7rem;
   padding-bottom: 8rem;
-  background-image: url(../images/catalog.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 
   &__text {
     margin-top: 3.9rem;
@@ -661,8 +658,14 @@ body {
     padding: 0;
     margin: 6rem auto 0;
     font-size: 1.6rem;
-    color: rgba($green, .6);
+    color: $green;
+    opacity: 0.6;
     cursor: pointer;
+    transition: opacity 0.3s ease;
+
+    &:hover {
+      opacity: 1;
+    }
 
     &::before {
       content: '';
@@ -694,6 +697,7 @@ body {
     font-size: 1.8rem;
     color: rgba($green, .6);
     text-decoration: none;
+    transition: color 0.3s ease;
 
     &:hover {
       color: $orange;
@@ -716,6 +720,7 @@ body {
     flex-direction: column;
     padding: 4rem 2rem;
     height: 432px;
+    transition: box-shadow 0.3s ease;
   
     &:hover {
       box-shadow: 0 0 0 2px rgba($green, .4) inset;
@@ -765,10 +770,6 @@ body {
 .delivery {
   padding-top: 6.4rem;
   padding-bottom: 10rem;
-  background-image: url(../images/delivery.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 
   &__box {
     display: flex;
@@ -824,28 +825,34 @@ body {
     list-style-type: none;
   }
 
-  &__link {
-    opacity: .4;
+  &__item {
+    height: 32px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    opacity: 0.4;
+    transform: scale(1);
+    transition: all 0.3s ease;
 
     &:hover {
       opacity: 1;
+      transform: scale(1.05);
     }
   }
 
-  &__icon {
-    height: 40px;
+  &__mastercard {
+    width: 53px;
+    background-image: url(../images/mastercard.svg);
+  }
 
-    &_mastercard {
-      width: 54px;
-    }
+  &__visa {
+    width: 74px;
+    background-image: url(../images/visa.svg);
+  }
 
-    &_visa {
-      width: 72px;
-    }
-
-    &_paypal {
-      width: 87px;
-    }
+  &__paypal {
+    width: 88px;
+    background-image: url(../images/paypal.svg);
   }
 }
 
@@ -891,6 +898,7 @@ body {
     font-size: 2.4rem;
     color: $green;
     text-decoration: none;
+    transition: color 0.3s ease;
 
     &::before {
       content: '';
@@ -949,6 +957,7 @@ body {
     padding: 2.2rem 3rem;
     margin-bottom: 2.8rem;
     width: 100%;
+    transition: border-color 0.3s ease;
 
     &:focus {
       border: 1px solid rgba($green, 1);
@@ -971,6 +980,7 @@ body {
 
   &__link {
     margin-top: 1.2rem;
+    cursor: pointer;
   }
 
   &__docs {
@@ -978,13 +988,6 @@ body {
     color: rgba($green, .6);
     text-decoration: none;
   }
-}
-
-.footer-bg {
-  background-image: url(../images/footer.png);
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
 }
 
 .footer {
@@ -995,11 +998,16 @@ body {
   &__box {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 4.2rem;
+    margin-bottom: 6.1rem;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 66%;
   }
 
   &__logo {
-    flex-basis: 22%;
     padding-top: 6px;
 
     img {
@@ -1029,6 +1037,7 @@ body {
     font-size: 1.8rem;
     color: $green;
     text-decoration: none;
+    transition: color 0.3s ease;
 
     &:hover {
       color: $orange;
@@ -1061,6 +1070,7 @@ body {
       background-position: center;
       background-repeat: no-repeat;
       opacity: 0.6;
+      transition: opacity 0.3s ease;
 
       &_vk {
         background-image: url(../images/vk.svg);
@@ -1086,16 +1096,21 @@ body {
   &__text {
     display: flex;
     justify-content: space-between;
+  }
+
+  &__par {
+    margin: 0;
     font-size: 1.6rem;
     color: rgba($green, .4);
+  }
 
-    a {
-      color: rgba($green, .4);
-      text-decoration: none;
+  &__author {
+    color: rgba($green, .4);
+    text-decoration: none;
+    transition: color 0.3s ease;
 
-      &:hover {
-        color: rgba($green, 1);
-      }
+    &:hover {
+      color: rgba($green, 1);
     }
   }
 }
